# ER_NL2SQL

./: README.md  pyproject.toml
docs/: data_discription.json
mapping/: keyword_mapping.json
scripts/: app.py  db_connector.py  json_schema_loader.py  query_generator.py  query_validator.py  schema_compressor.py  schema_embedder.py  schema_mapper.py  streamlit_app.py  utils.py
